Refactor Training service layer files for Spring JPA